--- a/EgitimPlatformuAI/Views/NewLessonScreen/NewLessonScreen.storyboard
+++ b/EgitimPlatformuAI/Views/NewLessonScreen/NewLessonScreen.storyboard
@@ -16,27 +16,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select a Class" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E53-Nm-pS4">
-                                <rect key="frame" x="98" y="252" width="209" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select a Class" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E53-Nm-pS4">
+                                <rect key="frame" x="137" y="139" width="119" height="34"/>
+                                <color key="backgroundColor" name="softBlue"/>
+                                <color key="textColor" name="darkBlue"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Lesson Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xi-x3-rCf">
-                                <rect key="frame" x="72" y="330" width="261" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Lesson Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xi-x3-rCf">
+                                <rect key="frame" x="20" y="213" width="353" height="34"/>
+                                <color key="backgroundColor" name="softBlue"/>
+                                <color key="textColor" name="darkBlue"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MdH-ia-wac">
-                                <rect key="frame" x="140" y="409" width="113" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MdH-ia-wac">
+                                <rect key="frame" x="140" y="327" width="113" height="34.333333333333314"/>
+                                <color key="backgroundColor" name="sapphireBlue"/>
+                                <color key="tintColor" name="porcelain"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add Lesson"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" name="backDarkBlue"/>
+                        <color key="backgroundColor" name="charcoal"/>
+                        <constraints>
+                            <constraint firstItem="0xi-x3-rCf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="0Qu-tA-joV"/>
+                            <constraint firstItem="MdH-ia-wac" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="CUP-0o-09K"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0xi-x3-rCf" secondAttribute="trailing" constant="20" id="X3x-hb-0Xj"/>
+                            <constraint firstItem="0xi-x3-rCf" firstAttribute="top" secondItem="E53-Nm-pS4" secondAttribute="bottom" constant="40" id="keB-97-pUR"/>
+                            <constraint firstItem="MdH-ia-wac" firstAttribute="top" secondItem="0xi-x3-rCf" secondAttribute="bottom" constant="80" id="p26-Iz-7Og"/>
+                            <constraint firstItem="E53-Nm-pS4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="rMZ-uL-qWq"/>
+                            <constraint firstItem="E53-Nm-pS4" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="80" id="sGj-b0-IEn"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="levelTextField" destination="E53-Nm-pS4" id="7kA-im-1Ok"/>
@@ -48,8 +66,20 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="backDarkBlue">
-            <color red="0.10588235294117647" green="0.12549019607843137" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="charcoal">
+            <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="darkBlue">
+            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="porcelain">
+            <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="sapphireBlue">
+            <color red="0.23921568627450981" green="0.41960784313725491" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="softBlue">
+            <color red="0.8901960784313725" green="0.94901960784313721" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
